--- a/index.html
+++ b/index.html
@@ -120,21 +120,25 @@
             <p>Contact Me</p>
     
             <div class="row mt-4 sm-device">
-                <div class="col-6 ">
+                <div class="col-6 talk-to-me">
                     <h1 class="fs-4 mb-4">Talk to me</h1>
                     <div class="row width-300 height-300 border mb-4 p-4">
-                        <i class="fa-solid fa-envelope"></i>
+                        <i class="fa-solid fa-envelope-open-text"></i>
                         <p>Email</p>
+                        <p>Rumi@gmail.com</p>
                     </div>
                     <div class="row width-300 height-300 border mb-4 p-4">
-                        <i class="fa-solid fa-envelope"></i>
+                        <i class="fa-brands fa-square-whatsapp"></i>
                         <p>Whats App</p>
+                        <p>01456789967</p>
                     </div>
                     <div class="row width-300 height-300 border mb-4 p-4">
-                        <i class="fa-solid fa-envelope"></i>
+                        <i class="fa-brands fa-facebook"></i>
                         <p>Facebook</p>
+                        <p>Rumi</p>
                     </div>
                 </div>
+                
                 <div class="col-6">
                     <form action="" method="post">
                         <div class="row form-div">
@@ -184,7 +188,5 @@
     </div>
     <!-- footer End -->
 
-
 </body>
-
 </html>
